--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
 }
 body{
     background-color: rgba(0,0,0,0.7);
+    display:flex ;
+    justify-content: center;
+    
 }
 * > *{
     font-family: 'Poppins', sans-serif;
