--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -1,6 +1,8 @@
 .container{
+    display: flex;
+    flex-direction: column;
     width: 60vw;
-    height: 100vh;
+    height: fit-content;
     margin: 0 auto;
     background-color: rgba(0,0,0,0.1);
 }
@@ -9,4 +11,5 @@
     flex-direction: column;
     flex-wrap: wrap;
     width: 100%;
+
 }
