--- a/src/Components/Options/Option.css
+++ b/src/Components/Options/Option.css
@@ -1,15 +1,15 @@
 .option{
+    margin: 2px auto;
     width: 80%;
     height: 40px;
     padding: 2px 10px;
     font-weight: 500;
     font-variant: small-caps;
-    letter-spacing: 2cm;
     background-color: transparent;
     color: white;
     border: 1px solid #0DFF92;
 }
 .option:hover{
     background-color: azure;
-    color: whitesmoke;
+    color: #0DFF92;
 }
