--- a/src/Components/Question/Question.css
+++ b/src/Components/Question/Question.css
@@ -1,9 +1,11 @@
 .question{
+    display: flex;
+    align-items: center;
     margin: 15px 0;
     padding-left: 5px;
     width: 90%;
-    height: fit-content;
-    font-size: 1.4rem;
+    height: 80px;
+    font-size: 0.8rem;
     /* letter-spacing: 2cm; */
     color: white;
     font-weight: 500;
