--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -1,15 +1,38 @@
 .container{
     display: flex;
     flex-direction: column;
-    width: 60vw;
-    height: fit-content;
+    width: 70vw;
+    min-height: 80vh;
     margin: 0 auto;
     background-color: rgba(0,0,0,0.1);
 }
 .options-container{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    min-height: fit-content;
+    align-items: center;
+    gap: 10px;
     flex-wrap: wrap;
     width: 100%;
+    margin: 10px 0px;
 
+}
+.finish-button{
+    display: flex;
+    justify-content: center;
+    height: 100%;
+}
+.result{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
+@media screen and (max-width:600px) {
+    .container{
+        width: 100%;
+        height: 100vh;
+    }
 }
