--- a/src/Components/Options/Option.css
+++ b/src/Components/Options/Option.css
@@ -1,15 +1,22 @@
 .option{
-    margin: 2px auto;
     width: 80%;
-    height: 40px;
+    min-height: 40px;
     padding: 2px 10px;
+    font-size: 1.2rem;
     font-weight: 500;
     font-variant: small-caps;
     background-color: transparent;
     color: white;
     border: 1px solid #0DFF92;
+    transition: all 0.2s ease-in-out;
 }
 .option:hover{
+    cursor: pointer;
     background-color: azure;
-    color: #0DFF92;
+    color: rgb(4, 49, 4);
+}
+@media screen and (max-width:600px) {
+    .option{
+        width:95%;
+    }
 }
