--- a/src/Components/Question/Question.css
+++ b/src/Components/Question/Question.css
@@ -4,12 +4,10 @@
     margin: 15px 0;
     padding-left: 5px;
     width: 90%;
-    height: 80px;
-    font-size: 0.8rem;
-    /* letter-spacing: 2cm; */
+    min-height: 80px;
+    font-size: 1rem;
     color: white;
     font-weight: 500;
-    /* line-height: 4cm; */
     border-bottom:1px solid #0DFF92 ;
 
 }
