--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,7 @@
 }
 body{
     background-color: rgba(0,0,0,0.7);
-    display:flex ;
-    justify-content: center;
-    
+       
 }
 * > *{
     font-family: 'Poppins', sans-serif;
@@ -19,4 +17,8 @@ body{
     text-align: center;
     border: 4px solid #0DFF92;
     color: #f0f0f0;
+}
+h1{
+    color: white;
+    text-align: center;
 }
